--- a/src/pages/reminder/Reminder.css
+++ b/src/pages/reminder/Reminder.css
@@ -2,13 +2,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    padding-bottom: 20vh;
 }
 
 .calendar-item {
-    margin-top: 10vh;
-    width: 80vw;
-    height: 47vh;
+    margin-top: 5vh;
+    width: 85vw;
+    height: 50vh;
     background-color: #333333;
     border-radius: 20px;
     display: flex;
@@ -16,6 +16,39 @@
     align-items: center;
 }
 
-.menu-container {
-    position: fixed;
+.reminder{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.reminder-container{
+    margin-top: 10vh;
+    width: 85vw;
+    border-radius: 20px;
+    background-color: #333333;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    color: whitesmoke;
+    padding-bottom: 2vh;
+}
+
+.remidner-item{color: whitesmoke;}
+
+.reminder-list{
+    margin-top: 2vh;
+    width: 75vw;
+    border-radius: 10px;
+    color: whitesmoke;
+    background-color: aliceblue;
+}
+
+/* .reminder-list-item .reminder-list-item-description{
+    /* color: whitesmoke;
+}
+.reminder-list-item-description{
+    color: whitesmoke;
+} */ 
