--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,3 +1,24 @@
 body {
     background-color: #E6E6E6;
 }
+
+.home-container {
+    margin-top: 12vh;   
+    border-radius: 20px;
+    height: 70vh;
+    background-color: #333333;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: end;
+    align-items: center;
+}
+
+.home-item {
+    background-color: #3E6C61;
+    border-radius: 20px;
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
