--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -6,19 +6,22 @@ body {
     margin-top: 12vh;   
     border-radius: 20px;
     height: 70vh;
+    width: 50%;
     background-color: #333333;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
 }
 
 .home-item {
     background-color: #3E6C61;
-    border-radius: 20px;
-    width: 50vw;
+    border-radius: 30px;
+    width: 30vw;
+    height: 26vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
 }
