user left and editPet

--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -16,6 +16,7 @@ footer {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    bottom: 0;
 }
 
 .menu-item {
